added dang supper background image

--- a/docs/style/main.css
+++ b/docs/style/main.css
@@ -5,6 +5,7 @@ html, body {
 
 .dang-container {
   height: 100vh;
+  background: url("../images//dang_supper.png") no-repeat center;
 }
 
 .dang-text-1 {
