added wheel marker

--- a/docs/style/main.css
+++ b/docs/style/main.css
@@ -74,6 +74,10 @@ html, body {
   text-transform: uppercase;
 }
 
+.roulette-wheel-marker {
+  fill: #e26a6a;
+}
+
 .roulette-wheel-controls {
   display: flex;
   justify-content: center;
