added support for random wheel spin

--- a/docs/style/main.css
+++ b/docs/style/main.css
@@ -20,6 +20,12 @@ html, body {
   /* background-color: #ecf0f1; */
 }
 
+/* @media (max-width: 768px) {
+  .spins-sidebar {
+    display: none;
+  }
+} */
+
 .spins-sidebar {
   flex: 1;
   /* border-right: 2px solid #95a5a6; */
@@ -61,10 +67,7 @@ html, body {
 }
 
 .roulette-wheel-spin {
-  animation-name: roulette-spin;
-  animation-duration: 0.5s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
+  transition: transform 5s cubic-bezier(0.39, 0.58, 0.57, 1);
 }
 
 .roulette-wheel-label {
