--- a/docs/style/main.css
+++ b/docs/style/main.css
@@ -1,56 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
-
-html, body {
-  height: 100%;
-  margin: 0;
-  font-family: 'Source Sans Pro', sans-serif;
-}
-
-.spins-container {
-  position: fixed;
-  display: flex;
-  padding: 0;
-  margin: 0;
-
-  top: 0;
-  left: 0;
-
-  width: 100%;
-  height: 100%;
-  /* background-color: #ecf0f1; */
-}
-
-/* @media (max-width: 768px) {
-  .spins-sidebar {
-    display: none;
-  }
-} */
-
-.spins-sidebar {
-  flex: 1;
-  /* border-right: 2px solid #95a5a6; */
-  padding: 1em 2.5em;
-}
-
-.spins-wheel {
-  flex: 4;
-  /* padding: 1em 2.5em; */
-}
-
+@import "https://fonts.googleapis.com/css?family=Source+Sans+Pro";
 /* wheel */
-.wheel-title {
-  text-align: center;
-  margin: 1.5em 0 1em 0;
-}
-
-.roulette-wheel-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  width: 100%;
-}
-
 @keyframes roulette-spin {
   from {
     transform: rotate(0deg);
@@ -58,41 +7,94 @@ html, body {
   to {
     transform: rotate(360deg);
   }
- }
+}
+/* history sidebar */
+/* placeholder styling */
+html, body {
+  height: 100%;
+  margin: 0;
+  font-family: "Source Sans Pro", sans-serif;
+}
 
+.spins-container {
+  position: fixed;
+  display: flex;
+  padding: 0;
+  margin: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.spins-sidebar {
+  flex: 1;
+  padding: 1em 2.5em;
+}
+@media (max-width: 768px) {
+  .spins-sidebar {
+    display: none;
+  }
+}
+.spins-wheel {
+  flex: 4;
+}
+.spins-placeholder {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.spins-placeholder-content {
+  text-align: center;
+}
+
+/* wheel style */
 .roulette-wheel {
-  height: 500px;
+  height: auto;
+  width: 100%;
   margin: 0 auto;
   display: block;
 }
-
+.roulette-wheel-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+}
+.roulette-wheel-content {
+  width: 60%;
+  position: relative;
+}
+@media (max-width: 768px) {
+  .roulette-wheel-content {
+    width: 75%;
+  }
+}
 .roulette-wheel-spin {
+  position: absolute;
   transition: transform 5s cubic-bezier(0.39, 0.58, 0.57, 1);
 }
-
 .roulette-wheel-label {
   font-size: 0.1px;
   font-weight: bolder;
   fill: white;
   text-transform: uppercase;
 }
-
 .roulette-wheel-marker {
   fill: #e26a6a;
 }
-
 .roulette-wheel-controls {
   display: flex;
   justify-content: center;
   margin-top: 2.3em;
 }
 
-/* history sidebar */
 .wheels-list {
   list-style-type: none;
   padding: 0;
 }
-
 .wheels-list-item {
   border-bottom: 2px solid black;
   padding: 1.3em 1em;
@@ -102,80 +104,57 @@ html, body {
   justify-content: space-between;
   align-items: center;
 }
-
-.wheels-empty-label {
-  padding: 1em 0em;
-}
-
-.wheels-list-item-delete {
-  color: #e74c3c;
-  opacity: 0.5;
-  margin-top: 3px;
-}
-
-.wheels-list-item-delete:hover {
-  opacity: 1;
-}
-
 .wheels-list-item:hover {
   cursor: pointer;
   color: #3f51b5;
   border-color: #3f51b5;
 }
-
-.wheels-list-item.is-selected {
+.wheels-list-item-delete {
+  color: #e74c3c;
+  opacity: 0.5;
+  margin-top: 3px;
+}
+.wheels-list-item-delete:hover {
+  opacity: 1;
+}
+.wheels-list-item .is-selected {
   color: #3f51b5;
   border-color: #3f51b5;
 }
+.wheels-empty-label {
+  padding: 1em 0em;
+}
 
 /* button styling */
-
 .btn {
-	width: 150px;
-	margin: 1em;
-	padding: 1em 2em;
-	border: none;
-	background: none;
-	color: inherit;
+  width: 150px;
+  margin: 1em;
+  padding: 1em 2em;
+  border: none;
+  background: none;
+  color: inherit;
   position: relative;
-
   font-size: 0.9em;
   letter-spacing: 2px;
   text-transform: uppercase;
   font-weight: bolder;
-
   border: 3px solid;
-	border-radius: 40px;
+  border-radius: 40px;
 }
-
+.btn > span {
+  display: block;
+}
 .btn:hover {
   border-color: #3f51b5;
   color: #3f51b5;
   cursor: pointer;
 }
-
 .btn:focus {
-	outline: none;
+  outline: none;
 }
-
-.btn > span {
-	display: block;
-}
-
 .btn:active {
   border-color: #a29bfe;
   color: #a29bfe;
 }
 
-/* placeholder styling */
-.spins-placeholder {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.spins-placeholder-content {
-  text-align: center;
-}
+/*# sourceMappingURL=main.css.map */
