--- a/docs/style/main.css
+++ b/docs/style/main.css
@@ -80,10 +80,19 @@ html, body {
   font-size: 0.1px;
   font-weight: bolder;
   fill: white;
+  paint-order: stroke;
+  stroke: black;
+  stroke-width: 0.01px;
+  text-transform: uppercase;
+}
+.roulette-wheel-result {
+  font-size: 0.12px;
+  text-anchor: middle;
+  fill: #3f51b5;
   text-transform: uppercase;
 }
 .roulette-wheel-marker {
-  fill: #e26a6a;
+  fill: #ffeb3b;
 }
 .roulette-wheel-controls {
   display: flex;
