added auto focus to new text inputs

--- a/src/spins.scss
+++ b/src/spins.scss
@@ -154,7 +154,7 @@ html, body {
         }
       }
 
-      .is-selected {
+      &.is-selected {
         color: $dark-purple;
         border-color: $dark-purple;
       }
