--- a/docs/style/main.css
+++ b/docs/style/main.css
@@ -53,9 +53,14 @@ html, body {
 /* wheel style */
 .roulette-wheel {
   height: auto;
-  width: 90%;
+  width: 80%;
   margin: 0 auto;
   display: block;
+}
+@media (max-width: 768px) {
+  .roulette-wheel {
+    width: 95%;
+  }
 }
 .roulette-wheel-container {
   display: flex;
@@ -70,7 +75,7 @@ html, body {
 }
 @media (max-width: 768px) {
   .roulette-wheel-content {
-    width: 75%;
+    width: 80%;
   }
 }
 .roulette-wheel-spin {
@@ -80,7 +85,7 @@ html, body {
   transition: transform 5s cubic-bezier(0.39, 0.58, 0.57, 1);
 }
 .roulette-wheel-label {
-  font-size: 0.09px;
+  font-size: 0.1px;
   letter-spacing: 0.004px;
   font-weight: bolder;
   fill: white;
@@ -88,14 +93,24 @@ html, body {
   stroke: black;
   stroke-width: 0.01px;
   text-transform: uppercase;
+  text-anchor: middle;
 }
 .roulette-wheel-result {
-  font-size: 0.12px;
-  text-anchor: middle;
-  fill: #3f51b5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5em;
+  height: 2em;
+  margin-bottom: 0.9em;
+  font-size: 1.5em;
+  color: #3f51b5;
   letter-spacing: 0.004px;
   text-transform: uppercase;
   font-weight: bolder;
+}
+.roulette-wheel-result-text {
+  padding: 0 0.5em 0.3em 0.5em;
+  border-bottom: 3px solid #a29bfe;
 }
 .roulette-wheel-marker {
   fill: #ffeb3b;
@@ -103,7 +118,7 @@ html, body {
 .roulette-wheel-controls {
   display: flex;
   justify-content: center;
-  margin-top: 2.3em;
+  margin-top: 2em;
 }
 
 .wheels-list {
