--- a/src/spins.scss
+++ b/src/spins.scss
@@ -101,15 +101,16 @@ html, body {
   }
 
   &-label {
-    font-size: 0.1px;
-    letter-spacing: 0.004px;
+    font-size: 1.2em;
+    letter-spacing: 0.75px;
     font-weight: bolder;
     fill: white;
     paint-order: stroke;
     stroke: black;
-    stroke-width: 0.01px;
+    stroke-width: 1px;
     text-transform: uppercase;
     text-anchor: middle;
+    dominant-baseline: central;
   }
 
   &-result {
