--- a/docs/style/main.css
+++ b/docs/style/main.css
@@ -1,4 +1,9 @@
 @import "https://fonts.googleapis.com/css?family=Source+Sans+Pro";
+
+* {
+  box-sizing: border-box;
+}
+
 /* wheel */
 @keyframes roulette-spin {
   from {
@@ -15,7 +20,17 @@ html, body {
   margin: 0;
   font-family: "Source Sans Pro", sans-serif;
 }
+button
+{
+  background: none;
+  border: none;
+}
 
+.header-wrapper
+{
+  display: flex;
+  justify-content: space-between;
+}
 .spins-container {
   position: fixed;
   display: flex;
@@ -30,9 +45,50 @@ html, body {
   flex: 1;
   padding: 1em 2.5em;
 }
+.sidebar-button,
+.sidebar-close
+{
+  display: none;
+}
 @media (max-width: 768px) {
   .spins-sidebar {
-    display: none;
+    position: absolute;
+    height: 100%;
+  }
+  .spins-sidebar.is-open {
+    z-index: 1;
+    width: 100%;
+    background-color: white;
+  }
+  .spins-sidebar.is-transparent {
+    background-color: rgba(255, 255, 255, 0.8);
+  }
+  .sidebar-close
+  {
+    display: flex;
+  }
+  .sidebar-button
+  {
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    display: flex;
+    align-items: center;
+    padding: 5px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    font-weight: bolder;
+    border: 2px solid;
+    border-radius: 40px;
+  }
+  .sidebar-button::before {
+    content: '';
+    height: 15px;
+    width: 15px;
+    margin-right: 5px;
+    background-image: url('/docs/images/wheels.svg');
+    background-repeat: no-repeat;
+    background-size: 100%;
   }
 }
 .spins-wheel {
